# simple-curl

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  simple-curl.cpp
include/: UrlParser.h  WebClient.h
libweb-client/: CMakeLists.txt  UrlParser.cpp  WebClient.cpp
tests/: CMakeLists.txt
tests/test-libweb-client/: CMakeLists.txt  test-UrlParser.cpp
